--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,9 @@ matplotlib>=3.7.0
 seaborn>=0.12.0
 openpyxl>=3.1.0
 flask>=2.3.0
+groq>=0.5.0
+google-api-python-client>=2.100.0
+gTTS>=2.4.0
+pydub>=0.25.1
+requests>=2.31.0
 
